# open5gs

lib/sbi/: client.c  message.c  message.h  ogs-sbi.h
lib/trace/: meson.build  ogs-trace.h
lib/trace/opentelemetry-cpp/: ogs-trace.cpp
lib/trace/void/: ogs-trace.cpp
src/amf/: gmm-handler.c  init.c  meson.build
src/smf/: context.c  init.c  meson.build  nsmf-handler.c
src/udm/: nudr-handler.c  ue-sm.c
src/udr/: nudr-handler.c
